# mastering-gen-ai-with-fast-api-backend

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.cursor/: settings.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Docker-local.dockerfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  test_auth.py
backend/app/: main.py  pyproject.toml
backend/app/api/v1/: auth.py  chat.py  files.py  routes.py
backend/app/api/v1/endpoints/: auth.py  chat.py  files.py  health_check.py  presignedurl.py
backend/app/config/: settings.py
backend/app/core/: exceptions.py  exceptions_handler.py  logging.py  security.py
backend/app/core/exceptions/: base.py  http_exception.py
backend/app/db/: session.py
backend/app/middlewares/: auth_middleware.py  base_decoraters.py  logging_middleware.py
backend/app/models/: __init__.py  login_session.py  user.py  user_file.py
backend/app/schemas/: __init__.py  auth_schema.py  chat_schema.py  files.py  presignedurl.py  response_schema.py
backend/app/services/internal/: auth_service.py  file_upload.py
backend/app/services/llm/: base.py  factory.py
backend/app/services/llm/providers/: bedrock_provider.py  openai_provider.py
backend/app/services/prompts/: assistant.py  chat.py
backend/app/services/repositories/: __init__.py  base.py  file.py  login_session_repository.py  user.py  user_file_repository.py  user_repository.py
backend/app/utils/: auth.py  cookie_config.py  enum.py  file.py  file_constants.py  file_handler.py  models.py  orm.py  response_handler.py
backend/app/utils/auth/: auth.py  cookie_config.py
backend/app/utils/file/aws/: file_constants.py
backend/database/config/: alembic.ini
backend/database/migration/: env.py
backend/database/migration/versions/: 0297135e6454_create_users_table.py  dfdbe9975fa7_create_user_files_table.py
backend/database/models/: __init__.py  file.py  user.py  user_file.py
backend/database_migration/versions/: 0297135e6454_create_users_table.py  8a00e021c4df_create_login_session_table.py
backend/tests/api/v1/endpoints/: test_health_check.py
frontend/: Docker-local.dockerfile  Dockerfile  README.md  jest.config.mjs  package-lock.json  package.json  tailwind.config.ts
infra/: docker-compose.yml
nextjs-ai/: package-lock.json  package.json
(+38 files in other folders)
