[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "boto3==1.35.59",
    "botocore==1.35.59",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "ecdsa==0.19.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.4",
    "frozenlist==1.5.0",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "jiter==0.7.1",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.7",
    "langchain-aws==0.2.7",
    "langchain-community==0.3.7",
    "langchain-core==0.3.17",
    "langchain-openai==0.2.8",
    "langchain-text-splitters==0.3.2",
    "langsmith==0.1.142",
    "loguru==0.7.2",
    "mako==1.3.6",
    "markupsafe==3.0.2",
    "marshmallow==3.23.1",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "numpy==1.26.4",
    "openai==1.54.4",
    "orjson==3.10.11",
    "packaging==24.2",
    "pluggy==1.5.0",
    "propcache==0.2.0",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic[email]==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.6.1",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.19",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rsa==4.9",
    "s3transfer==0.10.3",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.35",
    "starlette==0.41.2",
    "tenacity==9.0.0",
    "tiktoken==0.8.0",
    "tomli==2.0.2",
    "tqdm==4.67.0",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "urllib3==1.26.20",
    "uvicorn==0.32.0",
    "yarl==1.17.1",
    "psycopg2-binary>=2.9.11",
    "email-validator>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
]
